--- a/日本の留学.html
+++ b/日本の留学.html
@@ -61,7 +61,7 @@
 
 <ul>
  <div align="center">
- <img src="hokudai-scenery-1536x1131.jpg"height="400"width="900"><br>
+ <img src="hokudai-scenery-1536x1131.jpg"height="400"width="900"/><br>
 
 <div align="center">
 <font style="font-size:36px"><b><sub title>Study experience in hokkaido university </b></font></sub title><br><br>
@@ -76,7 +76,7 @@ Also it was very interesting <br>to be able to discuss various countries,cultura
 <font style="font-size:36px"><b><sub title>Hokkaido University</b></sub title></font>
 </ul>
 <ul>
-<img src="Hokkaido-University-Museum-Sapporo-Japan.jpg" height="200" width="300"><br><br>
+<img src="Hokkaido-University-Museum-Sapporo-Japan.jpg" height="200" width="300"/><br><br>
 </ul>
 <ul>
 <p><txt>Hokkaido University is one of the oldest, largest, and most prestigious universities in Japan. <br>
@@ -96,9 +96,9 @@ Hokkaido university`s alumni include a Nobel laureate, business leaders,<br> res
 <div align="center">
 <div class="row">
 
-<img src="zoo.jpg"height="200" width="300">
-<img src="the-blue-pond-istock-636770298-2.jpg"height="200" width="300" >
-<img src="noboribetsu.jpg"height="200" width="300" >
+<img src="zoo.jpg"height="200" width="300"/>
+<img src="the-blue-pond-istock-636770298-2.jpg"height="200" width="300"/ >
+<img src="noboribetsu.jpg"height="200" width="300"/ >
 
 
 </div>
@@ -107,9 +107,9 @@ Hokkaido university`s alumni include a Nobel laureate, business leaders,<br> res
 <ul>
 <div align="center">
 <div class="row">
-<img src="12655234765_c34613697a_b.jpg"height="200" width="300">
-<img src="summer.jpg"height="200" width="300">
-<img src="Sapporo-1.jpg"height="200" width="300" >
+<img src="12655234765_c34613697a_b.jpg"height="200" width="300"/>
+<img src="summer.jpg"height="200" width="300"/>
+<img src="Sapporo-1.jpg"height="200" width="300"/ >
 </ul>
 <br><br>
 <ul>
@@ -141,27 +141,27 @@ hokkaido+region%2C+japan%7Cct%3Dcore%7Cln%3D29%3Aen%7Ctc%3Dall&utm_keyword=-l243
 <font style="font-size:36px"><b><font="10"><sub title>Popular Foods</b></sub title></font><br><br>
 <div align="center">
 <div class="row">
-<img src="jingisukan.jpg" height="100" width="200">
-<img src="ikameshi.jpg" height="100" width="200">
-<img src="butadon.jpg"height="100" width="200" >
-<img src="hokkaido milk.jpg"height="100" width="200" >
+<img src="jingisukan.jpg" height="100" width="200"/>
+<img src="ikameshi.jpg" height="100" width="200"/>
+<img src="butadon.jpg"height="100" width="200"/ >
+<img src="hokkaido milk.jpg"height="100" width="200"/ >
 </div>
 </ul>
 
 <ul>
 <div align="center">
 <div class="row">
-<img src="hokkaido-imomochi-thumbnail.png"height="100" width="200">
-<img src="126A8530-1024x683.jpg"height="100" width="200">
-<img src="ishikari nabe.jpg"height="100" width="200" >
-<img src="robatayaki.jpg"height="100" width="200" >
+<img src="hokkaido-imomochi-thumbnail.png"height="100" width="200"/>
+<img src="126A8530-1024x683.jpg"height="100" width="200"/>
+<img src="ishikari nabe.jpg"height="100" width="200"/ >
+<img src="robatayaki.jpg"height="100" width="200"/ >
 </ul>
 <ul>
 
 <div class="row">
-<img src="sapporo ramen.jpg"height="100" width="200">
-<img src="zangi.jpg"height="100" width="200">
-<img src="Yubari-King-Melon-1024x554.jpg"height="100" width="200" >
+<img src="sapporo ramen.jpg"height="100" width="200"/>
+<img src="zangi.jpg"height="100" width="200"/>
+<img src="Yubari-King-Melon-1024x554.jpg"height="100" width="200"/ >
 </div>
 </ul>
 <br><br>
@@ -184,8 +184,8 @@ in addition to top-notch seafood. <br>Hokkaido is also one of the only parts of 
 <br><br>
  <section id="contact">
         <h2>Contact Details</h2>
-   <button>  <img src="180-1808853_mail-logo-png-white.png"height="40" width="40" > </button> <button><font style="font-size:20px"> <p>Email: methni@gmail.com</p></button><br><br>
-      <button>  <img src="253-2539286_contact-us-icon-png-contact-icon-png.png"height="40" width="40" ></button>  <button><font style="font-size:20px">  <p>Phone: +81 80 1234 5678</p></button>
+   <button>  <img src="180-1808853_mail-logo-png-white.png"height="40" width="40"/ > </button> <button><font style="font-size:20px"> <p>Email: methni@gmail.com</p></button><br><br>
+      <button>  <img src="253-2539286_contact-us-icon-png-contact-icon-png.png"height="40" width="40" /></button>  <button><font style="font-size:20px">  <p>Phone: +81 80 1234 5678</p></button>
         
     </section>
    <br><br>
